--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.9"
   }
 }
